--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
-/* .App {
-  text-align: center;
-}
 
-.App-logo {
+/* 
+.App {
+  background-image: url('./images/background.jpeg');
+} */
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,7 +37,7 @@
   to {
     transform: rotate(360deg);
   }
-} */
+} */ 
 
 /* body {
   overflow: hidden !important;
